--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
 PORT = 4000
-DATABASEURL = 'mongodb://localhost:27017/employee-management-portal'
-TOKEN_PRIVATE_KEY=jwtSecretKey
-TOKEN_EXPIRATION_TIME=900
+DATABASEURL = mongodb://localhost:27017/employee-management-portal
+TOKEN_PRIVATE_KEY = secretKey
+TOKEN_EXPIRATION_TIME = 9000
